# z-golden

./: pyproject.toml
proto/: base_data.proto  config.proto  session.proto
scripts/: generate_proto.py
src/zgold/: __init__.py
src/zgold/comm/: comm.py
src/zgold/node/: comm.py  config.py  method.py  node.py  ptypes.py  session.py  test_input.py
src/zgold/proto/: __init__.py  base_data_pb2.py  base_data_pb2.pyi  config_pb2.py  config_pb2.pyi  session_pb2.py  session_pb2.pyi
src/zgold/py_proto/: base_data.py  base_type.py  data_model_config.py  prop.py
test/: test_keywords.py
test/notes/: timestamps.py
test/test_node_init/: test_tags.py
test/test_node_startup/: basic_node.json5  big_num.json5  oops_all_models.json5  tag_node.json5  test_startup.py
test/test_node_startup/json_files/: basic_node.json5  format_error_0.json5  format_error_1.json5  format_error_2.json5  format_error_3.json5  just_key.json5  keyword_error.json5  method_node.json5  nested_model.json5  oops_all_models.json5  tag_node.json5
test/test_node_startup/my_models/: bar.json5
test/test_node_startup/my_models/MES/: nested_workorder.json5  workorder.json5
test/test_node_startup/my_models/mechanical/: motor.json5
